mobile fixes for parallax image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://veritech.io"><img src="img/veritech-logo-site.png"></a>
+                <a class="navbar-brand" href="http://veritech.io"><img src="img/veritech-logo-site@2x.png" width="86" height="55"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -158,7 +158,7 @@
 				<div class="col-md-4">
 					<img src="img/infographic.png" />
 				</div>
-				<div class="col-md-4 top-30">
+				<div class="col-md-4">
 					<div class="info-content">
         				<span class="info-item red">1</span>
                         <p><strong>Tell us about your idea</strong>. What are your business needs? What are your users needs? What is your vision of the completed product? It's all right if you don't know all the answers we can help you find them.</p>
@@ -168,7 +168,7 @@
                         <p><strong>A glimpse into the future</strong>. See what your product will look like, on any device. Even more, now you have the chance to get the first feedback from your users.</p>
         			</div>
 				</div>
-				<div class="col-md-4 top-30">
+				<div class="col-md-4">
 					<div class="info-content">
         				<span class="info-item purple">3</span>
                         <p><strong>Bringing your idea to life</strong>. Using the adequate technology for the job we ensure that we keep velocity high and cost of ownership low. We architect systems built to scale and expand alongside your business.</p>
@@ -261,20 +261,22 @@
 			<div class="col-md-4">
 				<h4>
 					<a href="#">
-						<span>Integer condimentum accumsan massa</span> 
-						<span>non feugiat. Vivamus ut auctor orci.</span> 
+						<span>Integer condimentum accumsan</span> 
+						<span>massa non feugiat. Vivamus ut</span><br />
+						<span>auctor.</span>
 					</a>
 				</h4>
-				<p><br />Praesent velit elit, tempor et tristique non, eleifend ac massa. Praesent varius tincidunt augue ac pretium. Nunc egestas porttitor varius. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ac diam commodo, dignissim libero ut, vestibulum nisl. Nunc congue in ligula sed consectetur...</p>
+				<p>Praesent velit elit, tempor et tristique non, eleifend ac massa. Praesent varius tincidunt augue ac pretium. Nunc egestas porttitor varius. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ac diam commodo, dignissim libero ut, vestibulum nisl. Nunc congue in ligula sed consectetur...</p>
 			</div>
 			<div class="col-md-4">
 				<h4>
 					<a href="#">
-						<span>Nulla ac fermentum risus, in porttitor</span>
-						<span>felis. Mauris pretium blandit feugiat.</span> 
+						<span>Nulla ac fermentum risus, in </span>
+						<span>porttitor felis. Mauris pretium.</span>
+						<span>blandit feugiat</span>
 					</a>
 				</h4>
-				<p><br />Curabitur bibendum fringilla massa, ut placerat magna ullamcorper sit amet. In ut facilisis tellus, ut luctus metus. In molestie posuere leo, dignissim placerat arcu dictum a. Integer eu nibh luctus, egestas lectus mollis, vestibulum mi. Ut ut consequat dui. Nullam viverra purus nec odio rutrum porttitor. Maecenas nec ante...</p>
+				<p>Curabitur bibendum fringilla massa, ut placerat magna ullamcorper sit amet. In ut facilisis tellus, ut luctus metus. In molestie posuere leo, dignissim placerat arcu dictum a. Integer eu nibh luctus, egestas lectus mollis, vestibulum mi. Ut ut consequat dui. Nullam viverra purus nec odio rutrum porttitor. Maecenas nec ante...</p>
 			</div>
 		</div>
 	</div>
