added text, tester and minor fixes to mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="noindex">
     <title>VeriTech</title>
 
-	<link rel="icon" type="image/png" href="img/favicon.png" />
+	<link rel="icon" type="image/png" href="img/favicon-vt.png" />
 	
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -109,14 +109,15 @@
         	<div class="col-md-7">
 				<h4>Applications types</h4>
 				<ul class="custom-list">
-					<li>Sistemul de Management Legislativ</li>
-					<li>ERP pentru industria de asigurări</li>
-					<li>Sistemul de Document Management și Managementul fluxului de lucru</li>
-					<li>Portaluri web cu CMS, forumuri și rețele sociale</li>
-					<li>Aplicații pentru smartphone, pentru diferite platforme</li>
-					<li>Arhitectură baze de date și infrastructură</li>
-					<li>Integrare în Cloud privat și arhitectură</li>
-					<li>Managementul de mediu virtual și rețele</li>
+					<li>Responsive web applications</li>
+					<li>RESTful web services</li>
+					<li>Cross-platform web mobile applications</li>
+					<li>Native mobile applications </li>
+					<li>Content management systems</li>
+					<li>Document management systems</li>
+					<li>Customer relationship management systems</li>
+					<li>Public and private cloud integration and management</li>
+
 
 				</ul>
 			</div>
@@ -126,6 +127,8 @@
 						<li data-target="#carousel-example-generic" data-slide-to="0" class=""></li>
 						<li data-target="#carousel-example-generic" data-slide-to="1" class="active"></li>
 						<li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
+						<li data-target="#carousel-example-generic" data-slide-to="3" class=""></li>
+						<li data-target="#carousel-example-generic" data-slide-to="4" class=""></li>
 					</ol>
 					<div class="carousel-inner">
 						<div class="item active">
@@ -170,10 +173,10 @@
 		<h3 class="ft-header ft-center">How we work</h3>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4 col-sm-6 hidden-xs">
 					<img src="img/infographic.png" />
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 col-sm-6">
 					<div class="info-content">
         				<span class="info-item red">1</span>
                         <p><strong>Tell us about your idea</strong>. What are your business needs? What are your users needs? What is your vision of the completed product? It's all right if you don't know all the answers we can help you find them.</p>
@@ -183,7 +186,7 @@
                         <p><strong>A glimpse into the future</strong>. See what your product will look like, on any device. Even more, now you have the chance to get the first feedback from your users.</p>
         			</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 col-sm-12">
 					<div class="info-content">
         				<span class="info-item purple">3</span>
                         <p><strong>Bringing your idea to life</strong>. Using the adequate technology for the job we ensure that we keep velocity high and cost of ownership low. We architect systems built to scale and expand alongside your business.</p>
@@ -194,7 +197,7 @@
         			</div>
 				</div>
 				
-				<div class="col-md-8 pull-right">
+				<div class="col-md-8 col-sm-12 pull-right">
 					<div class="info-content">
         				<span class="info-item">5</span>
                         <p><strong>It doesn’t need to end here</strong>. As your business grows, we’ll be right by your side to ensure that you can accomplish everything you imagine. Have a new idea? Tell us more.
@@ -211,7 +214,7 @@
 			<div class="col-md-2">
 				<h3 class="ft-right">Meet the team</h3>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-6">
 				<div class="media">
 					<a class="pull-left" href="#">
 						<img class="media-object" alt="CTO" src="img/team-cto.png" style="width: 110px; height: 110px;">
@@ -222,9 +225,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-6">
 				<div class="media">
 					<a class="pull-left" href="#">
 						<img class="media-object" alt="CTO" src="img/team-ux.png" style="width: 110px; height: 110px;">
@@ -235,7 +236,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4">
+		</div>
+		<div class="row">
+			<div class="col-md-4 col-sm-6">
 				<div class="media">
 					<a class="pull-left" href="#">
 						<img class="media-object" alt="CTO" src="img/team-frontend.png" style="width: 110px; height: 110px;">
@@ -246,13 +249,24 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-6">
 				<div class="media">
 					<a class="pull-left" href="#">
 						<img class="media-object" alt="CTO" src="img/team-backend.png" style="width: 110px; height: 110px;">
 					</a>
 					<div class="media-body">
 						<h4 class="media-heading">Back-End Developer</h4>
+						She focuses on what the client wantsand she delivers fast!
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-6">
+				<div class="media">
+					<a class="pull-left" href="#">
+						<img class="media-object" alt="CTO" src="img/team-tester.png" style="width: 110px; height: 110px;">
+					</a>
+					<div class="media-body">
+						<h4 class="media-heading">Tester</h4>
 						She focuses on what the client wantsand she delivers fast!
 					</div>
 				</div>
@@ -266,9 +280,9 @@
 			<div class="col-md-4">
 				<h4>
 					<a href="#">
-						<span>Lorem ipsum dolor sit amet,</span> 
-						<span>consectetur adipiscing elit. Duis</span>
-						<span>molestie lectus quis.</span>
+						<span>Lorem ipsum dolor sit amet,
+						consectetur adipiscing elit. Duis
+						molestie lectus quis.</span>
 					</a>
 				</h4>
 				<p>Vivamus magna nibh, commodo nec est lobortis, tristique fermentum tellus. Aenean volutpat ipsum ac porttitor porta. Cras sollicitudin elit nisl, ut dignissim quam lacinia sed. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas non neque at nunc congue sodales...</p>
@@ -276,9 +290,9 @@
 			<div class="col-md-4">
 				<h4>
 					<a href="#">
-						<span>Integer condimentum accumsan</span> 
-						<span>massa non feugiat. Vivamus ut</span><br />
-						<span>auctor.</span>
+						<span>Integer condimentum accumsan
+						massa non feugiat. Vivamus ut
+						auctor.</span>
 					</a>
 				</h4>
 				<p>Praesent velit elit, tempor et tristique non, eleifend ac massa. Praesent varius tincidunt augue ac pretium. Nunc egestas porttitor varius. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ac diam commodo, dignissim libero ut, vestibulum nisl. Nunc congue in ligula sed consectetur...</p>
@@ -286,9 +300,9 @@
 			<div class="col-md-4">
 				<h4>
 					<a href="#">
-						<span>Nulla ac fermentum risus, in </span>
-						<span>porttitor felis. Mauris pretium.</span>
-						<span>blandit feugiat</span>
+						<span>Nulla ac fermentum risus, in
+						porttitor felis. Mauris pretium.
+						blandit feugiat</span>
 					</a>
 				</h4>
 				<p>Curabitur bibendum fringilla massa, ut placerat magna ullamcorper sit amet. In ut facilisis tellus, ut luctus metus. In molestie posuere leo, dignissim placerat arcu dictum a. Integer eu nibh luctus, egestas lectus mollis, vestibulum mi. Ut ut consequat dui. Nullam viverra purus nec odio rutrum porttitor. Maecenas nec ante...</p>
