update carousel mobile img

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		<hr />
 		
 		<div class="row">
-        	<div class="col-md-7">
+        	<div class="col-md-7 col-sm-6">
 				<h4>Applications types</h4>
 				<ul class="custom-list">
 					<li>Responsive web applications</li>
@@ -121,7 +121,7 @@
 
 				</ul>
 			</div>
-			<div class="col-md-5">
+			<div class="col-md-5 col-sm-6">
 				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 					<ol class="carousel-indicators">
 						<li data-target="#carousel-example-generic" data-slide-to="0" class=""></li>
@@ -277,7 +277,7 @@
 	<div class="container blog" id="blog">
 		<h3 class="ft-header ft-center">Blog</h3>
 		<div class="row">
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-4">
 				<h4>
 					<a href="#">
 						<span>Lorem ipsum dolor sit amet,
@@ -287,7 +287,7 @@
 				</h4>
 				<p>Vivamus magna nibh, commodo nec est lobortis, tristique fermentum tellus. Aenean volutpat ipsum ac porttitor porta. Cras sollicitudin elit nisl, ut dignissim quam lacinia sed. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas non neque at nunc congue sodales...</p>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-4">
 				<h4>
 					<a href="#">
 						<span>Integer condimentum accumsan
@@ -297,7 +297,7 @@
 				</h4>
 				<p>Praesent velit elit, tempor et tristique non, eleifend ac massa. Praesent varius tincidunt augue ac pretium. Nunc egestas porttitor varius. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ac diam commodo, dignissim libero ut, vestibulum nisl. Nunc congue in ligula sed consectetur...</p>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-4">
 				<h4>
 					<a href="#">
 						<span>Nulla ac fermentum risus, in
@@ -322,14 +322,14 @@
 		<div class="container">
 			<div class="contact-info">
 				<div class="row">
-					<div class="col-md-3 contact-column">
+					<div class="col-md-3 col-sm-4 contact-column">
 						<h4>VeriTech</h4>
 						<p>45-47 Drumul Taberei, District 6,<br/>
 						Bucharest, Romania</p>
 						<p>021.067.829.23</br>
 						<a href="mailto:office@veritech.io">office@veritech.io</a></p>
 					</div>
-					<div class="col-md-3 contact-column right">
+					<div class="col-md-3 col-sm-4 contact-column right">
 						<h4>Let’s keep in touch</h4>
 						<p>Subscribe to our <a href="#">newsletter</a> or say hellow to us on:</p>
 						<p class="social-media">
