--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 		<div class="parallax-image"></div>
 	</div>
 
+	<div class="site-content">
+	
 	<div class="container" id="wedo">
 		<h3 class="ft-header">What we do</h3>
 		<div class="row">
@@ -221,7 +223,7 @@
 					</a>
 					<div class="media-body">
 						<h4 class="media-heading">CTO</h4>
-						Because we need a boss and he’s also good with tech.
+						Because we all need a boss and he’s also good with tech.
 					</div>
 				</div>
 			</div>
@@ -232,7 +234,7 @@
 					</a>
 					<div class="media-body">
 						<h4 class="media-heading">UX/UI Designer</h4>
-						She focuses on what the client wantsand she delivers fast!
+						She focuses on what the client wants and she delivers fast!
 					</div>
 				</div>
 			</div>
@@ -245,7 +247,7 @@
 					</a>
 					<div class="media-body">
 						<h4 class="media-heading">Front-End Developer</h4>
-						She focuses on what the client wantsand she delivers fast!
+						Many say that he's a wizard, anything he touches comes alive. 
 					</div>
 				</div>
 			</div>
@@ -256,7 +258,7 @@
 					</a>
 					<div class="media-body">
 						<h4 class="media-heading">Back-End Developer</h4>
-						She focuses on what the client wantsand she delivers fast!
+						He created the matrix, without him the world would come to an end.
 					</div>
 				</div>
 			</div>
@@ -266,8 +268,8 @@
 						<img class="media-object" alt="CTO" src="img/team-tester.png" style="width: 110px; height: 110px;">
 					</a>
 					<div class="media-body">
-						<h4 class="media-heading">Tester</h4>
-						She focuses on what the client wantsand she delivers fast!
+						<h4 class="media-heading">QA Engineer</h4>
+						He makes sure that the rest of the team doesn't screw up so he even tests while sleeping.
 					</div>
 				</div>
 			</div>
@@ -345,15 +347,15 @@
 		
 		<div class="copy">
 			<div class="container">
-				<p>2014 © VeriTech. ALL Rights Reserved. <a href="#">Terms of Service</a>
-				<a class="pull-right" href="http://veritech.io"><img src="img/veritech-logo-site.png"></a></p>
+				<p class="pull-left">2014 © VeriTech. ALL Rights Reserved. <br /><a href="#">Terms of Service</a></p>
+				<a class="pull-right" href="http://veritech.io"><img src="img/veritech-logo-site@2x.png" width="86" height="55"></a>
 			</div>
 		</div>
 		
 	</div>
 	
 	
-	
+	</div>
 	
 	
     <!-- JavaScript -->
