--- a/index.html
+++ b/index.html
@@ -78,28 +78,28 @@
 		<div class="row">
         	<div class="col-md-4">
         		<div class="feature">
-                    <i class="fa fa-compress feature-icon"></i>
-        			<div class="ft-content">
-        				<h4>Fully Responsive</h4>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
-        			</div>
-        		</div>	
-        	</div>
-        	<div class="col-md-4">
-        		<div class="feature">
                     <i class="fa fa-cogs feature-icon"></i>
         			<div class="ft-content">
-        				<h4>HTML5 + CSS3</h4>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
+        				<h4>Custom software</h4>
+                        <p>We are here to provide the best solution that suits your needs, no matter how small or big your business is. Our team is ready to take a challenge.</p>
         			</div>
         		</div>	
         	</div>
         	<div class="col-md-4">
         		<div class="feature">
-                    <i class="fa fa-rocket feature-icon"></i>
+                    <i class="fa fa-cloud feature-icon"></i>
         			<div class="ft-content">
-        				<h4>Launch Ready</h4>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
+        				<h4>Cloud integration</h4>
+                        <p>We offer support for integration with any major cloud platform, making sure that the everything is optimized for speed and stability.</p>
+        			</div>
+        		</div>	
+        	</div>
+        	<div class="col-md-4">
+        		<div class="feature">
+                    <i class="fa fa-users feature-icon"></i>
+        			<div class="ft-content">
+        				<h4>Consulting services</h4>
+                        <p>Our best people are ready to help you and your business grow, giving you the proper tools you need for both technology and human resources.</p>
         			</div>
         		</div>	
         	</div>			    
