update blog post

--- a/index.html
+++ b/index.html
@@ -294,12 +294,10 @@
 			<div class="col-md-4 col-sm-4">
 				<h4>
 					<a href="#">
-						<span>Integer condimentum accumsan
-						massa non feugiat. Vivamus ut
-						auctor.</span>
+						<span>Care about you to start caring about your users</span>
 					</a>
 				</h4>
-				<p>Praesent velit elit, tempor et tristique non, eleifend ac massa. Praesent varius tincidunt augue ac pretium. Nunc egestas porttitor varius. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ac diam commodo, dignissim libero ut, vestibulum nisl. Nunc congue in ligula sed consectetur...</p>
+				<p>We love to think that someday we’ll have a product that sells for itself right from the launch, that people will love right from the start and they’re going to pay a lot of bucks to have it even if...</p>
 			</div>
 			<div class="col-md-4 col-sm-4">
 				<h4>
