--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
     <meta charset="utf-8">
 	
-	<title>Veritech - Ideas for the future</title>
+	<title>VeriTech - Ideas for the future</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="We think, design and develop for the user. Using well-thought-out UX and the latest technology, from our first meeting to the final product, we make the impossible possible.">
