--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 					</a>
 				</div>
 				<p class="carousel-description">
-					Visual Studio, GitHub, Team City, ASP.NET MVC, Web API, SignalR, OWIN and Katana, xUnit, HTML5, CSS3, SASS, jQuery, RequireJS, Xamarin
+					Visual Studio, GitHub, TeamCity, ASP.NET MVC, Web API, SignalR, OWIN, Katana, xUnit, HTML5, CSS3, SASS, jQuery, RequireJS, Xamarin, 
 					Apache Cordova, PostgreSQL, SQL Server, Oracle, Redis, MongoDB, Raven and many more...
 
 
@@ -326,8 +326,8 @@
 			<div class="contact-info">
 				<div class="row">
 					<div class="col-md-3 col-sm-4 contact-column">
-						<h4>VeriTech</h4>
-						<p>45-47 Drumul Taberei, District 6,<br/>
+						<h4>VeriTech Solutions</h4>
+						<p>General Ion Culcer, No 6, District 6,<br/>
 						Bucharest, Romania</p>
 						<p>021.067.829.23</br>
 						<a href="mailto:office@veritech.io">office@veritech.io</a></p>
@@ -348,7 +348,7 @@
 		
 		<div class="copy">
 			<div class="container">
-				<p class="pull-left">2014 © VeriTech. ALL Rights Reserved. <br /><a href="#" data-toggle="modal" data-target="#myModal">Terms of Service</a></p>
+				<p class="pull-left">2014 © VeriTech Solutions. ALL Rights Reserved. <br /><a href="#" data-toggle="modal" data-target="#myModal">Terms of Service</a></p>
 				<a class="pull-right" href="http://veritech.io"><img src="img/veritech-logo-site@2x.png" width="86" height="55"></a>
 			</div>
 		</div>
