Update address and twitter

--- a/index.html
+++ b/index.html
@@ -327,17 +327,17 @@
 				<div class="row">
 					<div class="col-md-3 col-sm-4 contact-column">
 						<h4>VeriTech Solutions</h4>
-						<p>General Ion Culcer, No 6, District 6,<br/>
+						<p>Gheorghe Lupu, No 24, District 4,<br/>
 						Bucharest, Romania</p>
-						<p>021.067.829.23</br>
+						<p>
 						<a href="mailto:office@veritech.io">office@veritech.io</a></p>
 					</div>
 					<div class="col-md-3 col-sm-4 contact-column right">
 						<h4>Let’s keep in touch</h4>
 						<p>Subscribe to our <a href="#">newsletter</a> or say hellow to us on:</p>
 						<p class="social-media">
+							<a href="https://twitter.com/vtfuture" class="tw" title="Twitter" target="_blank">Twitter</a>
 							<a href="#" class="fb" title="Facebook" target="_blank">Facebook</a> 
-							<a href="#" class="tw" title="Twitter" target="_blank">Twitter</a>
 							<a href="#" rel="publisher" class="gplus" title="Google+" target="_blank">Google+</a>                 
 							<a href="#" class="lnkd" title="Linkedin" target="_blank">Linkedin</a>
 						</p>
