--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#home">Home</a>
+                    <li><a data-scroll href="#home">Home</a>
                     </li>
-                    <li><a href="#wedo">What we do</a>
+                    <li><a data-scroll href="#wedo">What we do</a>
                     </li>
-                    <li><a href="#work">How we work</a>
+                    <li><a data-scroll href="#work">How we work</a>
                     </li>
-					<li><a href="#team">Team</a>
+					<li><a data-scroll href="#team">Team</a>
                     </li>
-					<li><a href="#blog">Blog</a>
+					<li><a data-scroll href="#blog">Blog</a>
                     </li>
-					<li><a href="#contact">Contact</a>
+					<li><a data-scroll href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -510,12 +510,13 @@
     <script src="js/bootstrap.js"></script>
 	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 	<script src="js/gmaps.js"></script>
-
+	<script src="js/smoothscroll.js"></script>
+	<script src="js/smooth-scroll.js"></script>
 	
 		<script type="text/javascript">
 	
 		// Google Map
-		$(function () {
+		jQuery(function () {
 			var map = new GMaps({
 			el: "#map",
 			lat: 44.4085629,
@@ -554,11 +555,13 @@
 				lng: 26.101783,
 				icon: "img/marker.png"
 			  });
-		});
+			  
+			  //init scroll
+			  smoothScroll.init();
+		});	
+		
 	</script>
-	
-	<script src="js/smoothscroll.js"></script>
-
+		
 </body>
 
 </html>
