added data-scroll-header on nav

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body id="home">
 
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" data-scroll-header role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
