--- a/index.html
+++ b/index.html
@@ -9,10 +9,34 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="We think, design and develop for the user. Using well-thought-out UX and the latest technology, from our first meeting to the final product, we make the impossible possible.">
-    <meta name="author" content="">
+    <meta name="keywords" content="Cloud, UX, custom software, consulting, asp.net, c#, responsive, visual studio, github, sql, design, startup, front-end, server">
+	<meta name="author" content="VeriTech">
     <meta name="robots" content="noindex">
     <title>VeriTech</title>
+	
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@vtfuture">
+	<meta name="twitter:creator" content="@vtfuture">
+	<meta name="twitter:title" content="VeriTech">
+	<meta name="twitter:description" content="VeriTech - Ideas for the future">
+	<meta name="twitter:image:src" content="https://g.twimg.com/Twitter_logo_blue.png">
+	
+	<meta property="fb:admins" content="306126079558384" />
+	<meta property="og:locale" content="en_US" />
+	<meta property="og:title" content="VeriTech - Ideas for the future" />
+	<meta property="og:url" content="http://veritech.io" />
+	<meta property="og:image" content="http://veritech.io/img/vt-avatar-255x255.png" />
+	
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+	<link rel="apple-touch-icon" sizes="57x57" href="http://veritech.io/img/apple-touch-icon-57x57.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="http://veritech.io/img/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="http://veritech.io/img/apple-touch-icon-114x114.png" />
+	<link rel="apple-touch-icon" sizes="144x144" href="http://veritech.io/img/apple-touch-icon-144x144.png" />
 
+
+
+	<link rel="shortcut icon" href="img/favicon-vt.png">
 	<link rel="icon" type="image/png" href="img/favicon-vt.png" />
 	
     <!-- Bootstrap core CSS -->
@@ -334,7 +358,7 @@
 					</div>
 					<div class="col-md-3 col-sm-4 contact-column right">
 						<h4>Let’s keep in touch</h4>
-						<p>Subscribe to our <a href="#">newsletter</a> or say hellow to us on:</p>
+						<p>Say hellow to us on:</p>
 						<p class="social-media">
 							<a href="https://twitter.com/vtfuture" class="tw" title="Twitter" target="_blank">Twitter</a>
 							<a href="#" class="fb" title="Facebook" target="_blank">Facebook</a> 
