--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-6">
+                <!--<div class="col-lg-6">
                     <h2>Connect to VeriTech:</h2>
                 </div>
                 <div class="col-lg-6">
@@ -165,7 +165,7 @@
                         <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                         </li>
                     </ul>
-                </div>
+                </div>-->
             </div>
 
         </div>
