update text on site

--- a/index.html
+++ b/index.html
@@ -124,14 +124,76 @@
         	</div>
         	<div class="col-md-4">
         		<div class="feature">
-                    <i class="fa fa-users feature-icon"></i>
+                    <i class="fa fa-tablet feature-icon"></i>
         			<div class="ft-content">
-        				<h4>Consulting services</h4>
-                        <p>Our best people are ready to help you and your business grow, giving you the proper tools you need for both technology and human resources.</p>
+        				<h4>Mobile apps</h4>
+                        <p>We develop products for any platform, be it iOS, Windows Phone or Android, so you can have access to your business whenever you need it the most.</p>
         			</div>
         		</div>	
         	</div>			    
     	</div>
+		<div class="see-all">
+			<a href="#">Find out more <span class="glyphicon glyphicon-chevron-down"></span></a>
+		</div>
+		
+		<div class="feature-expanded" id="featured">
+			<div class="feature">
+				<i class="fa fa-cogs feature-icon"></i>
+				<div class="ft-content">
+					<h4>Custom software</h4>
+					<p>
+						No matter if you're a small or a large company, just starting out or have been in business for decades, we can help you improve your day-to-day operations, customer outreach, or even make possible whole new business models using custom software developed with your business needs in mind.<br /><br />
+						Using Agile, we develop in small increments and release a new functioning version of the software more often so that you can get feedback from your employees or your customers before the project is finished, making sure that the final product perfectly matches the needs of its users.<br /><br />
+						Our developers are not only passionate about technology, but about making your business grow. They continually try to understand and learn the problems you are trying to solve for your customers so that they can build a product that solves a need, that becomes an effective tool in solving the problems you are facing, not just something that's part of your employees' routine.<br /><br />
+						Together we can develop a roadmap for the project's development so that your needs are fully met in the least amount of time possible.
+					</p>
+				</div>
+			</div>
+			<div class="feature">
+				<i class="fa fa-cloud feature-icon"></i>
+				<div class="ft-content">
+					<h4>Cloud integration</h4>
+					<p>
+						The development of software is not the only cost associated with it. It must also be maintained and hosted, and we understand that this is an additional expense that you need to keep in mind.<br /><br />
+						If you host your app on-premises you have more control, and in some scenarios it might prove to be the most cost-efficient way. It does, however, mean that you need to have people able to manage and maintain the infrastructure required.<br /><br />
+						Hosting your software in the cloud means you don't have to worry about the infrastructure. Not only do you not need trained people to manage it, but you can also scale your application at the click of a button.<br /><br />
+						Due to our experience in building both cloud-based and self-hosted web solutions and our passion for technology, we can establish what the best route is for hosting your existing or soon-to-be developed product so that your needs are fully met in the most cost-efficient way.	
+					</p>
+				</div>
+			</div>
+			<div class="clearfix"></div>
+			<div class="feature col-md-6">
+				<i class="fa fa-tablet feature-icon"></i>
+				<div class="ft-content">
+					<h4>Mobile apps</h4>
+					<p>
+						The number of potential clients that have a mobile device is, without doubt, too large to be ignored and it's only growing. Be it a smartphone or a tablet, you want to be able to reach those customers in a way that offers for them the best possible experience.<br /><br />
+						Building a good mobile application is not just about taking your existing application and making it work well / look good in a mobile setting. You can discover whole new business opportunities that emerge from the more social nature of the devices. Anticipate your customer's needs and be the first to provide solutions to his problems, wherever he is.<br /><br />
+						It's not just your customers that can benefit from a mobile application. If software is a part of your business workflow, it can make your employees' jobs easier and more efficient. You can also better track the performance of your staff, resulting in the discovery of potential problems earlier. This way you can remove any inefficiencies they face and they can grow alongside your business.
+					</p>
+				</div>
+			</div>
+			<div class="feature col-md-6">
+				<i class="fa fa-users feature-icon"></i>
+				<div class="ft-content">
+					<h4>Consulting services</h4>
+					<p>
+						Our best people are ready to help you and your business grow, giving you the proper tools you need for both technology and human resources.<br /><br />
+						If you are building your own software, both our technical and business expertise can help you grow your business, build better software that lasts for a long time.<br /><br />
+						Here are some topics our experts can assists you with:<br />
+						<ul>
+							<li>.NET and JavaScript development: we can help your developers be more efficient using our knowledge and experience with various frameworks based on those technologies</li>
+							<li>Continuos integration & deployment using TeamCity and TFS</li>
+							<li>Agile development</li>
+							<li>User experience</li>
+							<li>Automated testing</li>
+							<li>Relational and NoSQL databases</li>
+						</ul>
+					</p>
+				</div>
+			</div>	
+			<div class="clearfix"></div>
+		</div>
 		
 		<hr />
 		
