job description summary

--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
 						<img class="media-object" alt="CTO" src="img/team-backend.png" style="width: 110px; height: 110px;">
 					</a>
 					<div class="media-body">
-						<h4 class="media-heading">Back-End Developer</h4>
-						He created the matrix, without him the world would come to an end.
+						<h4 class="media-heading">DevOps/Back-End Developer</h4>
+						Build, testing and deployment automation. Handles back-end services and database development.
 					</div>
 				</div>
 			</div>
