update fb page link

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 						<p>Say hellow to us on:</p>
 						<p class="social-media">
 							<a href="https://twitter.com/vtfuture" class="tw" title="Twitter" target="_blank">Twitter</a>
-							<a href="#" class="fb" title="Facebook" target="_blank">Facebook</a> 
+							<a href="https://www.facebook.com/vtfuture" class="fb" title="Facebook" target="_blank">Facebook</a> 
 							<a href="#" rel="publisher" class="gplus" title="Google+" target="_blank">Google+</a>                 
 							<a href="#" class="lnkd" title="Linkedin" target="_blank">Linkedin</a>
 						</p>
